--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://forkphorus.github.io/embed.html?id=399198788&auto-start=true&light-content=false" width="964" height="786" allowfullscreen="true" allowtransparency="true" style="border:none;border-radius:20px"></iframe>
+<iframe src="https://forkphorus.github.io/embed.html?id=399198788&ui=false" width="960" height="720" allowfullscreen="true" allowtransparency="true" style="border:none;"></iframe>
