--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-<iframe src="https://forkphorus.github.io/embed.html?id=399198788&ui=false" width="960" height="720" allowfullscreen="true" allowtransparency="true" style="border:none;"></iframe>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
+    
+      div {
+        top: 50%;
+        left: 50%;
+        position: absolute;
+        transform: translate(-50%,-50%);
+     }
+    </style>
+</head>
+<body>
+  <div>
+    <iframe src="https://forkphorus.github.io/embed.html?id=399198788&ui=false" width="auto" height="100vh" allowfullscreen="true" allowtransparency="true" style="border:none;"></iframe>
+  </div>
+</body>
+</html>
