--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         padding: 0;
       }
     
-      div {
+      .div {
         top: 50%;
         left: 50%;
         position: absolute;
@@ -19,8 +19,8 @@
     </style>
 </head>
 <body>
-  <div>
-    <iframe src="https://forkphorus.github.io/embed.html?id=399198788&ui=false" width="auto" height="100vh" allowfullscreen="true" allowtransparency="true" style="border:none;"></iframe>
+  <div class="div">
+    <iframe src="https://forkphorus.github.io/embed.html?id=399198788&ui=false" width="960" height="720" allowfullscreen="true" allowtransparency="true" style="border:none;"></iframe>
   </div>
 </body>
 </html>
