--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
         position: absolute;
         transform: translate(-50%,-50%);
      }
+        
+       body {
+            overflow: hidden;    
+       }
     </style>
 </head>
 <body>
   <div class="div">
-    <iframe src="https://forkphorus.github.io/embed.html?id=399198788&ui=false" width="960" height="720" allowfullscreen="true" allowtransparency="true" style="border:none;"></iframe>
+    <iframe src="https://forkphorus.github.io/embed.html?id=399198788&ui=false" width="1200" height="900" allowfullscreen="true" allowtransparency="true" style="border:none;"></iframe>
   </div>
 </body>
 </html>
