--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <div class="div">
-    <iframe src="https://forkphorus.github.io/embed.html?id=399198788&ui=false" width="960" height="720" allowfullscreen="true" allowtransparency="true" style="border:none;"></iframe>
+    <iframe src="https://forkphorus.github.io/embed.html?id=399198788&auto-start=true&light-content=false" width="1202" height="933" allowfullscreen="true" allowtransparency="true" style="border:none;"></iframe>
   </div>
 </body>
 </html>
